# smolgrad.ml

./: .gitignore  README.md  dune-project  flake.nix  shell.nix  smolgrad.opam
lib/: dune  layer.ml  layer.mli  network.ml  network.mli  neuron.ml  neuron.mli  variable.ml  variable.mli
smolgrad/: dune-project  smolgrad.opam
smolgrad/lib/: dune  hello.ml
smolgrad/test/: dune
src/core/: dune
test/: dune  network_operations.ml  neuron_operations.ml  smolgrad_tests.ml  variable_operations.ml
