(lang dune 3.8)

(name smolgrad)

(generate_opam_files true)

(source
 (github rounakdatta/smolgrad.ml))

(authors "Rounak Datta")

(maintainers "Rounak Datta")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name smolgrad)
 (synopsis "An educational implementation of autograd in OCaml")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
